--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@heroicons/react": "^2.2.0",
     "clsx": "^2.1.1",
     "framer-motion": "^12.34.2",
+    "lucide-react": "^0.575.0",
     "next": "^16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
